--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset=utf-8>
 	<title>Sample Color Integration</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link href='css/style.css' rel='stylesheet' type='text/css' >
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<p>Content</p>
+	<p>The colors are automatically synced with Brand.ai's <a href="https://brand.ai/styleguide/acme-demo">default style guide</a>.</p>
 </body>
 </html>
